fix: stabilize trusted session authorization